--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,13 @@
   <title>Gestión de Empleados</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
-<body class="p-4">
+<body class="p-4 bg-light">
   <div class="container">
-    <h1>Gestión de Empleados</h1>
-    <form id="empleado-form">
+    <h1 class="mb-4 text-center">Gestión de Empleados</h1>
+
+    <div id="alerta" class="alert d-none" role="alert"></div>
+
+    <form id="empleado-form" class="card p-3 mb-4 shadow">
       <input type="hidden" id="_id">
       <div class="mb-3">
         <label>Nombre</label>
@@ -22,18 +25,32 @@
         <label>Salario</label>
         <input type="number" id="salario" class="form-control" required>
       </div>
-      <button class="btn btn-success">Guardar</button>
+      <div class="d-flex justify-content-between">
+        <button type="submit" class="btn btn-success">Guardar</button>
+        <button type="button" id="cancelar" class="btn btn-secondary d-none">Cancelar</button>
+      </div>
     </form>
-    <hr>
-    <table class="table mt-4">
-      <thead>
+
+    <input type="text" id="buscar" class="form-control mb-3" placeholder="Buscar empleado por nombre...">
+
+    <table class="table table-bordered table-hover shadow-sm bg-white">
+      <thead class="table-dark">
         <tr>
           <th>Nombre</th>
           <th>Puesto</th>
           <th>Salario</th>
           <th>Acciones</th>
         </tr>
-      </th
+      </thead>
+      <tbody id="empleados-list"></tbody>
+    </table>
+  </div>
+
+  <script src="app.js"></script>
+</body>
+</html>
+
+
 
 
 
